crates/graph/tests/compile-fail/02-uninitialized-let.stderr
error: Only simple idents are supported in let bindings
 --> tests/compile-fail/02-uninitialized-let.rs:5:5
  |
5 |     let x: graph::TracedValue<i32>; // Error: Let bindings must be initialized
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
